Changelog
=========

(Unreleased) - 1.3.3
--------------------

    - Also make getmtime() calls more robust by retrying multiple times
      before giving up.
      [buchi]


(Unreleased) - 1.3.2
--------------------

    - When uploading the file back to Plone, try to open it multiple times
      before giving up, as it may have been locked by another process
      (e.g. virus scanner).
      [buchi]


(Unreleased) - 1.3.1
--------------------
    - Added MIME type definitions for Adobe and OpenOffice formats (lgraf)


(Unreleased) - 1.3.0
--------------------
    - Made "This object is already locked" a message dialog instead of error (lgraf)
    - Added mimetype mappings for Visio, MS Project and MindManager files (lgraf)
    - Disabled uploading of black box in case of success (lgraf)
    - Increased lock timeout in ZopeEdit.ini to 48h (lgraf)
    - Customized german translation for "Edition complete" message (lgraf)


(Unreleased) - 1.2.0
--------------------
    - Added BlackBox functionality. For every user-visible error a ZIP
      file containing log, metadata and input file will be sent back
      to Zope and stored for later debugging. (lgraf)


(Unreleased) - 1.1.0
--------------------
    - Customized german translation for "this object is already locked" (lgraf)
    - Try to figure out and use the correct extension for temporary file (lgraf)
    - Set manage_locks to 0 to prevent users from editing the same document
      twice (lgraf)
    - Using win32/ZopeEdit.ini as template for default configuration,
      not the inline config in zopeedit.py (lgraf)
    - Added content type mappings for XML based MS Office formats (lgraf)
    - Simplified info message after user closes editor (lgraf)
    - Added German translations (lgraf)
    - Fixed icon for win32 message dialogs (info instead of warning) (lgraf)
    - fixed file closing detection under MacOSX (thomasdesvenain)
    - zopeedit client works if fuser is located in /usr/bin folder.